[gd_scene load_steps=4 format=2]

[ext_resource path="res://League/League.gd" type="Script" id=1]
[ext_resource path="res://League/league_toggles.tres" type="ButtonGroup" id=2]
[ext_resource path="res://Common/ShowChicken.tscn" type="PackedScene" id=3]

[node name="League" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 295.0
margin_top = 33.0
margin_right = 1812.0
margin_bottom = 1021.0

[node name="Welcome" type="Label" parent="Panel"]
margin_right = 1212.0
margin_bottom = 86.0
text = "WELCOME TO BRONZE LEAGUE"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Panel"]
margin_left = 38.0
margin_top = 86.0
margin_right = 1517.0
margin_bottom = 188.0
text = "Three races in one day, if you want to win the league you must win them all.

 "

[node name="Prizes" type="Label" parent="Panel"]
margin_left = 38.0
margin_top = 124.0
margin_right = 1517.0
margin_bottom = 226.0
text = "Prize per race: $20               Prize for league: $200

 "

[node name="Diary" type="RichTextLabel" parent="Panel"]
margin_left = 38.0
margin_top = 164.0
margin_right = 1480.0
margin_bottom = 988.0

[node name="Go" type="Button" parent="Panel"]
margin_left = 1212.0
margin_top = 894.0
margin_right = 1491.0
margin_bottom = 963.0
text = "Go"

[node name="Bronze" type="Button" parent="Panel"]
margin_left = 1253.0
margin_top = 28.0
margin_right = 1480.0
margin_bottom = 86.0
toggle_mode = true
group = ExtResource( 2 )
text = "Bronze"

[node name="Silver" type="Button" parent="Panel"]
margin_left = 1253.0
margin_top = 86.0
margin_right = 1480.0
margin_bottom = 144.0
toggle_mode = true
group = ExtResource( 2 )
text = "Silver"

[node name="Gold" type="Button" parent="Panel"]
margin_left = 1253.0
margin_top = 144.0
margin_right = 1480.0
margin_bottom = 202.0
toggle_mode = true
group = ExtResource( 2 )
text = "Gold"

[node name="ShowChicken" parent="Panel" instance=ExtResource( 3 )]
position = Vector2( 1212, 757 )

[node name="ToCoop" type="Button" parent="."]
margin_left = 32.0
margin_top = 33.0
margin_right = 272.0
margin_bottom = 133.0
text = "<-- Back To Coop"

[connection signal="pressed" from="Panel/Go" to="." method="_on_Go_pressed"]
[connection signal="toggled" from="Panel/Bronze" to="." method="_on_League_toggled" binds= [ "BRONZE" ]]
[connection signal="toggled" from="Panel/Silver" to="." method="_on_League_toggled" binds= [ "SILVER" ]]
[connection signal="toggled" from="Panel/Gold" to="." method="_on_League_toggled" binds= [ "GOLD" ]]
[connection signal="pressed" from="ToCoop" to="." method="_on_ToCoop_pressed"]
